fix: overflow hidden invalid

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2248,7 +2248,7 @@ footer li:last-child {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: 0;
+  margin: auto;
   transform: translate(-50%, -50%);
 }
 
@@ -2266,8 +2266,10 @@ html, body {
 
 /* line 190, ../sass/partials/_homeLayout.scss */
 .background {
+  position: relative;
   height: 100%;
   background-color: #202a56;
+  overflow: hidden;
 }
 
 /* line 4, ../sass/partials/_albumLayout.scss */
